# rust_csv_reader

./: Cargo.toml  readme.md
src/: app.rs  csv_loader.rs  data_loader.rs  excel_loader.rs  font_setup.rs  main.rs
