[package]
name = "rust_excel_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
rfd = "0.14.1"
calamine = "0.25.0"
chrono = "0.4.38"
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
csv-async = "1.2"
tokio-util = { version = "0.7.10", features = ["compat"] }
once_cell = "1.19.0"
